<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:overScrollMode="never"
    android:scrollbars="none"
    android:layout_height="match_parent"
    tools:context=".SendOTPActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginTop="60dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/send"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/phone_auth"
            android:textSize="22sp"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account_create_one"
            android:textStyle="bold"
            android:textColor="@color/teal_700"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:orientation="vertical"
            android:gravity="center">

            <EditText
                android:id="@+id/fname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:hint="@string/enter_full_name"/>

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:layout_marginTop="5dp"
                android:textColorHint="@color/black"
                android:hint="@string/enter_username"/>

            <EditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:layout_marginTop="5dp"
                android:textColorHint="@color/black"
                android:hint="@string/_233_enter_phone_number"
                tools:ignore="TextFields" />
        </LinearLayout>
        <android.widget.Button
            android:id="@+id/registerBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:layout_marginTop="35dp"
            android:text="@string/register"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:background="@drawable/button_background"/>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:visibility="invisible" />


    </LinearLayout>

</ScrollView>