<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="never"
    android:scrollbars="none"
    tools:context=".VerifyOTPActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginTop="60dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/received"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/otp_verification"
            android:textSize="22sp"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_otp_sent_to"
            android:textStyle="bold"
            android:textColor="@color/teal_700"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"/>

        <TextView
            android:id="@+id/textMobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/inputCode1"
                android:layout_width="50dp"
                android:layout_height="45dp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="LabelFor"/>

            <EditText
                android:id="@+id/inputCode2"
                android:layout_width="50dp"
                android:layout_height="45dp"
                android:gravity="center"
                android:layout_marginLeft="4dp"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="LabelFor"
                android:layout_marginStart="4dp" />

            <EditText
                android:id="@+id/inputCode3"
                android:layout_width="50dp"
                android:layout_height="45dp"
                android:gravity="center"
                android:layout_marginLeft="4dp"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="LabelFor"
                android:layout_marginStart="4dp" />

            <EditText
                android:id="@+id/inputCode4"
                android:layout_width="50dp"
                android:layout_height="45dp"
                android:gravity="center"
                android:layout_marginLeft="4dp"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="LabelFor"
                android:layout_marginStart="4dp" />

            <EditText
                android:id="@+id/inputCode5"
                android:layout_width="50dp"
                android:layout_height="45dp"
                android:gravity="center"
                android:layout_marginLeft="4dp"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="LabelFor"
                android:layout_marginStart="4dp" />

            <EditText
                android:id="@+id/inputCode6"
                android:layout_width="50dp"
                android:layout_height="45dp"
                android:gravity="center"
                android:layout_marginLeft="4dp"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="LabelFor"
                android:layout_marginStart="4dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/didn_t_receive_otp"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/textResendOTP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:textColor="@color/purple_700"
                android:textSize="15sp"
                android:text="@string/resend_otp"
                android:textStyle="bold"/>

        </LinearLayout>

        <android.widget.Button
            android:id="@+id/verifyBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="35dp"
            android:text="@string/verify"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:background="@drawable/button_background"/>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:visibility="invisible" />


    </LinearLayout>

</ScrollView>